c-parse.output
State 43 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 197 conflicts: 1 shift/reduce
State 203 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ε
    2        | extdefs

    3 @1: ε

    4 extdefs: @1 extdef

    5 @2: ε

    6 extdefs: extdefs @2 extdef

    7 extdef: fndef
    8       | datadef
    9       | ASM '(' string ')' ';'

   10 datadef: setspecs notype_initdecls ';'
   11        | declmods setspecs notype_initdecls ';'
   12        | typed_declspecs setspecs initdecls ';'
   13        | declmods ';'
   14        | typed_declspecs ';'
   15        | error ';'
   16        | error '}'
   17        | ';'

   18 $@3: ε

   19 $@4: ε

   20 fndef: typed_declspecs setspecs declarator $@3 xdecls $@4 compstmt_or_error
   21      | typed_declspecs setspecs declarator error

   22 $@5: ε

   23 $@6: ε

   24 fndef: declmods setspecs notype_declarator $@5 xdecls $@6 compstmt_or_error
   25      | declmods setspecs notype_declarator error

   26 $@7: ε

   27 $@8: ε

   28 fndef: setspecs notype_declarator $@7 xdecls $@8 compstmt_or_error
   29      | setspecs notype_declarator error

   30 identifier: IDENTIFIER
   31           | TYPENAME

   32 unop: '&'
   33     | '-'
   34     | '+'
   35     | PLUSPLUS
   36     | MINUSMINUS
   37     | '~'
   38     | '!'

   39 expr: nonnull_exprlist

   40 exprlist: ε
   41         | nonnull_exprlist

   42 nonnull_exprlist: expr_no_commas
   43                 | nonnull_exprlist ',' expr_no_commas

   44 unary_expr: primary
   45           | '*' cast_expr
   46           | unop cast_expr
   47           | SIZEOF unary_expr
   48           | SIZEOF '(' typename ')'
   49           | ALIGNOF unary_expr
   50           | ALIGNOF '(' typename ')'

   51 cast_expr: unary_expr
   52          | '(' typename ')' cast_expr
   53          | '(' typename ')' '{' initlist maybecomma '}'

   54 expr_no_commas: cast_expr
   55               | expr_no_commas '+' expr_no_commas
   56               | expr_no_commas '-' expr_no_commas
   57               | expr_no_commas '*' expr_no_commas
   58               | expr_no_commas '/' expr_no_commas
   59               | expr_no_commas '%' expr_no_commas
   60               | expr_no_commas LSHIFT expr_no_commas
   61               | expr_no_commas RSHIFT expr_no_commas
   62               | expr_no_commas ARITHCOMPARE expr_no_commas
   63               | expr_no_commas EQCOMPARE expr_no_commas
   64               | expr_no_commas '&' expr_no_commas
   65               | expr_no_commas '|' expr_no_commas
   66               | expr_no_commas '^' expr_no_commas
   67               | expr_no_commas ANDAND expr_no_commas
   68               | expr_no_commas OROR expr_no_commas
   69               | expr_no_commas '?' xexpr ':' expr_no_commas
   70               | expr_no_commas '=' expr_no_commas
   71               | expr_no_commas ASSIGN expr_no_commas

   72 primary: IDENTIFIER
   73        | CONSTANT
   74        | string
   75        | '(' expr ')'
   76        | '(' error ')'

   77 @9: ε

   78 primary: '(' @9 compstmt ')'
   79        | primary '(' exprlist ')'
   80        | primary '[' expr ']'
   81        | primary '.' identifier
   82        | primary POINTSAT identifier
   83        | primary PLUSPLUS
   84        | primary MINUSMINUS

   85 string: STRING
   86       | string STRING

   87 xdecls: ε
   88       | decls

   89 decls: decl
   90      | errstmt
   91      | decls decl
   92      | decl errstmt

   93 setspecs: ε

   94 decl: typed_declspecs setspecs initdecls ';'
   95     | declmods setspecs notype_initdecls ';'
   96     | typed_declspecs ';'
   97     | declmods ';'

   98 typed_declspecs: typespec reserved_declspecs
   99                | declmods typespec reserved_declspecs

  100 reserved_declspecs: ε
  101                   | reserved_declspecs typespecqual_reserved
  102                   | reserved_declspecs SCSPEC

  103 declmods: TYPE_QUAL
  104         | SCSPEC
  105         | declmods TYPE_QUAL
  106         | declmods SCSPEC

  107 typed_typespecs: typespec reserved_typespecquals
  108                | nonempty_type_quals typespec reserved_typespecquals

  109 reserved_typespecquals: ε
  110                       | reserved_typespecquals typespecqual_reserved

  111 typespec: TYPESPEC
  112         | structsp
  113         | TYPENAME
  114         | TYPEOF '(' expr ')'
  115         | TYPEOF '(' typename ')'

  116 typespecqual_reserved: TYPESPEC
  117                      | TYPE_QUAL
  118                      | structsp

  119 initdecls: initdcl
  120          | initdecls ',' initdcl

  121 notype_initdecls: notype_initdcl
  122                 | notype_initdecls ',' initdcl

  123 maybeasm: ε
  124         | ASM '(' string ')'

  125 @10: ε

  126 initdcl: declarator maybeasm maybe_attribute '=' @10 init
  127        | declarator maybeasm maybe_attribute

  128 @11: ε

  129 notype_initdcl: notype_declarator maybeasm maybe_attribute '=' @11 init
  130               | notype_declarator maybeasm maybe_attribute

  131 maybe_attribute: ε
  132                | ATTRIBUTE '(' '(' attribute_list ')' ')'

  133 attribute_list: attrib
  134               | attribute_list ',' attrib

  135 attrib: IDENTIFIER
  136       | IDENTIFIER '(' CONSTANT ')'
  137       | IDENTIFIER '(' identifiers ')'

  138 init: expr_no_commas
  139     | '{' '}'
  140     | '{' initlist '}'
  141     | '{' initlist ',' '}'
  142     | error

  143 initlist: init
  144         | initlist ',' init

  145 declarator: after_type_declarator
  146           | notype_declarator

  147 after_type_declarator: '(' after_type_declarator ')'
  148                      | after_type_declarator '(' parmlist_or_identifiers
  149                      | after_type_declarator '[' expr ']'
  150                      | after_type_declarator '[' ']'
  151                      | '*' type_quals after_type_declarator
  152                      | TYPENAME

  153 parm_declarator: parm_declarator '(' parmlist_or_identifiers
  154                | parm_declarator '[' expr ']'
  155                | parm_declarator '[' ']'
  156                | '*' type_quals parm_declarator
  157                | TYPENAME

  158 notype_declarator: notype_declarator '(' parmlist_or_identifiers
  159                  | '(' notype_declarator ')'
  160                  | '*' type_quals notype_declarator
  161                  | notype_declarator '[' expr ']'
  162                  | notype_declarator '[' ']'
  163                  | IDENTIFIER

  164 @12: ε

  165 structsp: STRUCT identifier '{' @12 component_decl_list '}'
  166         | STRUCT '{' component_decl_list '}'
  167         | STRUCT identifier

  168 @13: ε

  169 structsp: UNION identifier '{' @13 component_decl_list '}'
  170         | UNION '{' component_decl_list '}'
  171         | UNION identifier

  172 @14: ε

  173 structsp: ENUM identifier '{' @14 enumlist maybecomma_warn '}'

  174 @15: ε

  175 structsp: ENUM '{' @15 enumlist maybecomma_warn '}'
  176         | ENUM identifier

  177 maybecomma: ε
  178           | ','

  179 maybecomma_warn: ε
  180                | ','

  181 component_decl_list: component_decl_list2
  182                    | component_decl_list2 component_decl

  183 component_decl_list2: ε
  184                     | component_decl_list2 component_decl ';'
  185                     | component_decl_list2 ';'

  186 component_decl: typed_typespecs setspecs components
  187               | nonempty_type_quals setspecs components
  188               | error

  189 components: ε
  190           | component_declarator
  191           | components ',' component_declarator

  192 component_declarator: declarator maybe_attribute
  193                     | declarator ':' expr_no_commas maybe_attribute
  194                     | ':' expr_no_commas

  195 enumlist: enumerator
  196         | enumlist ',' enumerator

  197 enumerator: identifier
  198           | identifier '=' expr_no_commas

  199 typename: typed_typespecs absdcl
  200         | nonempty_type_quals absdcl

  201 absdcl: ε
  202       | absdcl1

  203 nonempty_type_quals: TYPE_QUAL
  204                    | nonempty_type_quals TYPE_QUAL

  205 type_quals: ε
  206           | type_quals TYPE_QUAL

  207 absdcl1: '(' absdcl1 ')'
  208        | '*' type_quals absdcl1
  209        | '*' type_quals
  210        | absdcl1 '(' parmlist
  211        | absdcl1 '[' expr ']'
  212        | absdcl1 '[' ']'
  213        | '(' parmlist
  214        | '[' expr ']'
  215        | '[' ']'

  216 stmts: stmt
  217      | stmts stmt
  218      | stmts errstmt

  219 xstmts: ε
  220       | stmts

  221 errstmt: error ';'

  222 pushlevel: ε

  223 compstmt_or_error: compstmt
  224                  | error compstmt

  225 compstmt: '{' '}'
  226         | '{' pushlevel decls xstmts '}'
  227         | '{' pushlevel error '}'
  228         | '{' pushlevel stmts '}'

  229 $@16: ε

  230 simple_if: IF '(' expr ')' $@16 stmt

  231 stmt: compstmt
  232     | expr ';'

  233 $@17: ε

  234 stmt: simple_if ELSE $@17 stmt
  235     | simple_if

  236 $@18: ε

  237 $@19: ε

  238 stmt: WHILE $@18 '(' expr ')' $@19 stmt

  239 $@20: ε

  240 $@21: ε

  241 stmt: DO $@20 stmt WHILE $@21 '(' expr ')' ';'

  242 $@22: ε

  243 $@23: ε

  244 $@24: ε

  245 stmt: FOR '(' xexpr ';' $@22 xexpr ';' $@23 xexpr ')' $@24 stmt

  246 $@25: ε

  247 stmt: SWITCH '(' expr ')' $@25 stmt

  248 $@26: ε

  249 stmt: CASE expr ':' $@26 stmt

  250 $@27: ε

  251 stmt: DEFAULT ':' $@27 stmt
  252     | BREAK ';'
  253     | CONTINUE ';'
  254     | RETURN ';'
  255     | RETURN expr ';'
  256     | ASM maybe_type_qual '(' string ')' ';'
  257     | ASM maybe_type_qual '(' string ':' asm_operands ')' ';'
  258     | ASM maybe_type_qual '(' string ':' asm_operands ':' asm_operands ')' ';'
  259     | ASM maybe_type_qual '(' string ':' asm_operands ':' asm_operands ':' asm_clobbers ')' ';'
  260     | GOTO identifier ';'

  261 $@28: ε

  262 stmt: identifier ':' $@28 stmt
  263     | ';'

  264 maybe_type_qual: ε
  265                | TYPE_QUAL

  266 xexpr: ε
  267      | expr

  268 asm_operands: ε
  269             | nonnull_asm_operands

  270 nonnull_asm_operands: asm_operand
  271                     | nonnull_asm_operands ',' asm_operand

  272 asm_operand: STRING '(' expr ')'

  273 asm_clobbers: string
  274             | asm_clobbers ',' string

  275 $@29: ε

  276 parmlist: $@29 parmlist_1

  277 $@30: ε

  278 parmlist_or_identifiers: $@30 parmlist_or_identifiers_1

  279 parmlist_or_identifiers_1: parmlist_2 ')'
  280                          | identifiers ')'
  281                          | error ')'

  282 parmlist_1: parmlist_2 ')'
  283           | error ')'

  284 parmlist_2: ε
  285           | parms
  286           | parms ',' ELLIPSIS

  287 parms: parm
  288      | parms ',' parm

  289 parm: typed_declspecs parm_declarator
  290     | typed_declspecs notype_declarator
  291     | typed_declspecs absdcl
  292     | declmods notype_declarator
  293     | declmods absdcl

  294 identifiers: IDENTIFIER
  295            | identifiers ',' IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 38
    '%' <code> (37) 59
    '&' <code> (38) 32 64
    '(' <code> (40) 9 48 50 52 53 75 76 78 79 114 115 124 132 136 137 147 148 153 158 159 207 210 213 230 238 241 245 247 256 257 258 259 272
    ')' (41) 9 48 50 52 53 75 76 78 79 114 115 124 132 136 137 147 159 207 230 238 241 245 247 256 257 258 259 272 279 280 281 282 283
    '*' <code> (42) 45 57 151 156 160 208 209
    '+' <code> (43) 34 55
    ',' (44) 43 120 122 134 141 144 178 180 191 196 271 274 286 288 295
    '-' <code> (45) 33 56
    '.' <code> (46) 81
    '/' <code> (47) 58
    ':' <code> (58) 69 193 194 249 251 257 258 259 262
    ';' (59) 9 10 11 12 13 14 15 17 94 95 96 97 184 185 221 232 241 245 252 253 254 255 256 257 258 259 260 263
    '=' <code> (61) 70 126 129 198
    '?' <code> (63) 69
    '[' <code> (91) 80 149 150 154 155 161 162 211 212 214 215
    ']' (93) 80 149 150 154 155 161 162 211 212 214 215
    '^' <code> (94) 66
    '{' (123) 53 139 140 141 165 166 169 170 173 175 225 226 227 228
    '|' <code> (124) 65
    '}' (125) 16 53 139 140 141 165 166 169 170 173 175 225 226 227 228
    '~' (126) 37
    error (256) 15 16 21 25 29 76 142 188 221 224 227 281 283
    IDENTIFIER <ttype> (258) 30 72 135 136 137 163 294 295
    TYPENAME <ttype> (259) 31 113 152 157
    SCSPEC <ttype> (260) 102 104 106
    TYPESPEC <ttype> (261) 111 116
    TYPE_QUAL <ttype> (262) 103 105 117 203 204 206 265
    CONSTANT <ttype> (263) 73 136
    STRING <ttype> (264) 85 86 272
    ELLIPSIS (265) 286
    SIZEOF (266) 47 48
    ENUM (267) 173 175 176
    STRUCT (268) 165 166 167
    UNION (269) 169 170 171
    IF (270) 230
    ELSE (271) 234
    WHILE (272) 238 241
    DO (273) 241
    FOR (274) 245
    SWITCH (275) 247
    CASE (276) 249
    DEFAULT (277) 251
    BREAK (278) 252
    CONTINUE (279) 253
    RETURN (280) 254 255
    GOTO (281) 260
    ASM (282) 9 124 256 257 258 259
    TYPEOF (283) 114 115
    ALIGNOF (284) 49 50
    ATTRIBUTE (285) 132
    ASSIGN <code> (286) 71
    OROR <code> (287) 68
    ANDAND <code> (288) 67
    EQCOMPARE <code> (289) 63
    ARITHCOMPARE <code> (290) 62
    LSHIFT <code> (291) 60
    RSHIFT <code> (292) 61
    UNARY <code> (293)
    PLUSPLUS <code> (294) 35 83
    MINUSMINUS <code> (295) 36 84
    HYPERUNARY (296)
    POINTSAT <code> (297) 82


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program (66)
        on left: 1 2
        on right: 0
    extdefs (67)
        on left: 4 6
        on right: 2 6
    @1 (68)
        on left: 3
        on right: 4
    @2 (69)
        on left: 5
        on right: 6
    extdef (70)
        on left: 7 8 9
        on right: 4 6
    datadef (71)
        on left: 10 11 12 13 14 15 16 17
        on right: 8
    fndef (72)
        on left: 20 21 24 25 28 29
        on right: 7
    $@3 (73)
        on left: 18
        on right: 20
    $@4 (74)
        on left: 19
        on right: 20
    $@5 (75)
        on left: 22
        on right: 24
    $@6 (76)
        on left: 23
        on right: 24
    $@7 (77)
        on left: 26
        on right: 28
    $@8 (78)
        on left: 27
        on right: 28
    identifier <ttype> (79)
        on left: 30 31
        on right: 81 82 165 167 169 171 173 176 197 198 260 262
    unop <code> (80)
        on left: 32 33 34 35 36 37 38
        on right: 46
    expr <ttype> (81)
        on left: 39
        on right: 75 80 114 149 154 161 211 214 230 232 238 241 247 249 255 267 272
    exprlist <ttype> (82)
        on left: 40 41
        on right: 79
    nonnull_exprlist <ttype> (83)
        on left: 42 43
        on right: 39 41 43
    unary_expr <ttype> (84)
        on left: 44 45 46 47 48 49 50
        on right: 47 49 51
    cast_expr <ttype> (85)
        on left: 51 52 53
        on right: 45 46 52 54
    expr_no_commas <ttype> (86)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 42 43 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 138 193 194 198
    primary <ttype> (87)
        on left: 72 73 74 75 76 78 79 80 81 82 83 84
        on right: 44 79 80 81 82 83 84
    @9 (88)
        on left: 77
        on right: 78
    string <ttype> (89)
        on left: 85 86
        on right: 9 74 86 124 256 257 258 259 273 274
    xdecls (90)
        on left: 87 88
        on right: 20 24 28
    decls (91)
        on left: 89 90 91 92
        on right: 88 91 226
    setspecs <itype> (92)
        on left: 93
        on right: 10 11 12 20 21 24 25 28 29 94 95 186 187
    decl (93)
        on left: 94 95 96 97
        on right: 89 91 92
    typed_declspecs <ttype> (94)
        on left: 98 99
        on right: 12 14 20 21 94 96 289 290 291
    reserved_declspecs <ttype> (95)
        on left: 100 101 102
        on right: 98 99 101 102
    declmods <ttype> (96)
        on left: 103 104 105 106
        on right: 11 13 24 25 95 97 99 105 106 292 293
    typed_typespecs <ttype> (97)
        on left: 107 108
        on right: 186 199
    reserved_typespecquals <ttype> (98)
        on left: 109 110
        on right: 107 108 110
    typespec <ttype> (99)
        on left: 111 112 113 114 115
        on right: 98 99 107 108
    typespecqual_reserved <ttype> (100)
        on left: 116 117 118
        on right: 101 110
    initdecls <ttype> (101)
        on left: 119 120
        on right: 12 94 120
    notype_initdecls <ttype> (102)
        on left: 121 122
        on right: 10 11 95 122
    maybeasm <ttype> (103)
        on left: 123 124
        on right: 126 127 129 130
    initdcl <ttype> (104)
        on left: 126 127
        on right: 119 120 122
    @10 (105)
        on left: 125
        on right: 126
    notype_initdcl <ttype> (106)
        on left: 129 130
        on right: 121
    @11 (107)
        on left: 128
        on right: 129
    maybe_attribute <ttype> (108)
        on left: 131 132
        on right: 126 127 129 130 192 193
    attribute_list <ttype> (109)
        on left: 133 134
        on right: 132 134
    attrib <ttype> (110)
        on left: 135 136 137
        on right: 133 134
    init <ttype> (111)
        on left: 138 139 140 141 142
        on right: 126 129 143 144
    initlist <ttype> (112)
        on left: 143 144
        on right: 53 140 141 144
    declarator <ttype> (113)
        on left: 145 146
        on right: 20 21 126 127 192 193
    after_type_declarator <ttype> (114)
        on left: 147 148 149 150 151 152
        on right: 145 147 148 149 150 151
    parm_declarator <ttype> (115)
        on left: 153 154 155 156 157
        on right: 153 154 155 156 289
    notype_declarator <ttype> (116)
        on left: 158 159 160 161 162 163
        on right: 24 25 28 29 129 130 146 158 159 160 161 162 290 292
    structsp <ttype> (117)
        on left: 165 166 167 169 170 171 173 175 176
        on right: 112 118
    @12 (118)
        on left: 164
        on right: 165
    @13 (119)
        on left: 168
        on right: 169
    @14 (120)
        on left: 172
        on right: 173
    @15 (121)
        on left: 174
        on right: 175
    maybecomma (122)
        on left: 177 178
        on right: 53
    maybecomma_warn (123)
        on left: 179 180
        on right: 173 175
    component_decl_list <ttype> (124)
        on left: 181 182
        on right: 165 166 169 170
    component_decl_list2 <ttype> (125)
        on left: 183 184 185
        on right: 181 182 184 185
    component_decl <ttype> (126)
        on left: 186 187 188
        on right: 182 184
    components <ttype> (127)
        on left: 189 190 191
        on right: 186 187 191
    component_declarator <ttype> (128)
        on left: 192 193 194
        on right: 190 191
    enumlist <ttype> (129)
        on left: 195 196
        on right: 173 175 196
    enumerator <ttype> (130)
        on left: 197 198
        on right: 195 196
    typename <ttype> (131)
        on left: 199 200
        on right: 48 50 52 53 115
    absdcl <ttype> (132)
        on left: 201 202
        on right: 199 200 291 293
    nonempty_type_quals <ttype> (133)
        on left: 203 204
        on right: 108 187 200 204
    type_quals <ttype> (134)
        on left: 205 206
        on right: 151 156 160 206 208 209
    absdcl1 <ttype> (135)
        on left: 207 208 209 210 211 212 213 214 215
        on right: 202 207 208 210 211 212
    stmts (136)
        on left: 216 217 218
        on right: 217 218 220 228
    xstmts (137)
        on left: 219 220
        on right: 226
    errstmt (138)
        on left: 221
        on right: 90 92 218
    pushlevel (139)
        on left: 222
        on right: 226 227 228
    compstmt_or_error (140)
        on left: 223 224
        on right: 20 24 28
    compstmt <ttype> (141)
        on left: 225 226 227 228
        on right: 78 223 224 231
    simple_if (142)
        on left: 230
        on right: 234 235
    $@16 (143)
        on left: 229
        on right: 230
    stmt (144)
        on left: 231 232 234 235 238 241 245 247 249 251 252 253 254 255 256 257 258 259 260 262 263
        on right: 216 217 230 234 238 241 245 247 249 251 262
    $@17 (145)
        on left: 233
        on right: 234
    $@18 (146)
        on left: 236
        on right: 238
    $@19 (147)
        on left: 237
        on right: 238
    $@20 (148)
        on left: 239
        on right: 241
    $@21 (149)
        on left: 240
        on right: 241
    $@22 (150)
        on left: 242
        on right: 245
    $@23 (151)
        on left: 243
        on right: 245
    $@24 (152)
        on left: 244
        on right: 245
    $@25 (153)
        on left: 246
        on right: 247
    $@26 (154)
        on left: 248
        on right: 249
    $@27 (155)
        on left: 250
        on right: 251
    $@28 (156)
        on left: 261
        on right: 262
    maybe_type_qual <ttype> (157)
        on left: 264 265
        on right: 256 257 258 259
    xexpr <ttype> (158)
        on left: 266 267
        on right: 69 245
    asm_operands <ttype> (159)
        on left: 268 269
        on right: 257 258 259
    nonnull_asm_operands <ttype> (160)
        on left: 270 271
        on right: 269 271
    asm_operand <ttype> (161)
        on left: 272
        on right: 270 271
    asm_clobbers <ttype> (162)
        on left: 273 274
        on right: 259 274
    parmlist <ttype> (163)
        on left: 276
        on right: 210 213
    $@29 (164)
        on left: 275
        on right: 276
    parmlist_or_identifiers <ttype> (165)
        on left: 278
        on right: 148 153 158
    $@30 (166)
        on left: 277
        on right: 278
    parmlist_or_identifiers_1 <ttype> (167)
        on left: 279 280 281
        on right: 278
    parmlist_1 <ttype> (168)
        on left: 282 283
        on right: 276
    parmlist_2 <ttype> (169)
        on left: 284 285 286
        on right: 279 282
    parms <ttype> (170)
        on left: 287 288
        on right: 285 286 288
    parm <ttype> (171)
        on left: 289 290 291 292 293
        on right: 287 288
    identifiers <ttype> (172)
        on left: 294 295
        on right: 137 280 295


State 0

    0 $accept: • program $end

    $end      reduce using rule 1 (program)
    $default  reduce using rule 3 (@1)

    program  go to state 1
    extdefs  go to state 2
    @1       go to state 3


State 1

    0 $accept: program • $end

    $end  shift, and go to state 4


State 2

    2 program: extdefs •
    6 extdefs: extdefs • @2 extdef

    $end      reduce using rule 2 (program)
    $default  reduce using rule 5 (@2)

    @2  go to state 5


State 3

    4 extdefs: @1 • extdef

    error      shift, and go to state 6
    TYPENAME   shift, and go to state 7
    SCSPEC     shift, and go to state 8
    TYPESPEC   shift, and go to state 9
    TYPE_QUAL  shift, and go to state 10
    ENUM       shift, and go to state 11
    STRUCT     shift, and go to state 12
    UNION      shift, and go to state 13
    ASM        shift, and go to state 14
    TYPEOF     shift, and go to state 15
    ';'        shift, and go to state 16

    IDENTIFIER  reduce using rule 93 (setspecs)
    '*'         reduce using rule 93 (setspecs)
    '('         reduce using rule 93 (setspecs)

    extdef           go to state 17
    datadef          go to state 18
    fndef            go to state 19
    setspecs         go to state 20
    typed_declspecs  go to state 21
    declmods         go to state 22
    typespec         go to state 23
    structsp         go to state 24


State 4

    0 $accept: program $end •

    $default  accept


State 5

    6 extdefs: extdefs @2 • extdef

    error      shift, and go to state 6
    TYPENAME   shift, and go to state 7
    SCSPEC     shift, and go to state 8
    TYPESPEC   shift, and go to state 9
    TYPE_QUAL  shift, and go to state 10
    ENUM       shift, and go to state 11
    STRUCT     shift, and go to state 12
    UNION      shift, and go to state 13
    ASM        shift, and go to state 14
    TYPEOF     shift, and go to state 15
    ';'        shift, and go to state 16

    IDENTIFIER  reduce using rule 93 (setspecs)
    '*'         reduce using rule 93 (setspecs)
    '('         reduce using rule 93 (setspecs)

    extdef           go to state 25
    datadef          go to state 18
    fndef            go to state 19
    setspecs         go to state 20
    typed_declspecs  go to state 21
    declmods         go to state 22
    typespec         go to state 23
    structsp         go to state 24


State 6

   15 datadef: error • ';'
   16        | error • '}'

    ';'  shift, and go to state 26
    '}'  shift, and go to state 27


State 7

  113 typespec: TYPENAME •

    $default  reduce using rule 113 (typespec)


State 8

  104 declmods: SCSPEC •

    $default  reduce using rule 104 (declmods)


State 9

  111 typespec: TYPESPEC •

    $default  reduce using rule 111 (typespec)


State 10

  103 declmods: TYPE_QUAL •

    $default  reduce using rule 103 (declmods)


State 11

  173 structsp: ENUM • identifier '{' @14 enumlist maybecomma_warn '}'
  175         | ENUM • '{' @15 enumlist maybecomma_warn '}'
  176         | ENUM • identifier

    IDENTIFIER  shift, and go to state 28
    TYPENAME    shift, and go to state 29
    '{'         shift, and go to state 30

    identifier  go to state 31


State 12

  165 structsp: STRUCT • identifier '{' @12 component_decl_list '}'
  166         | STRUCT • '{' component_decl_list '}'
  167         | STRUCT • identifier

    IDENTIFIER  shift, and go to state 28
    TYPENAME    shift, and go to state 29
    '{'         shift, and go to state 32

    identifier  go to state 33


State 13

  169 structsp: UNION • identifier '{' @13 component_decl_list '}'
  170         | UNION • '{' component_decl_list '}'
  171         | UNION • identifier

    IDENTIFIER  shift, and go to state 28
    TYPENAME    shift, and go to state 29
    '{'         shift, and go to state 34

    identifier  go to state 35


State 14

    9 extdef: ASM • '(' string ')' ';'

    '('  shift, and go to state 36


State 15

  114 typespec: TYPEOF • '(' expr ')'
  115         | TYPEOF • '(' typename ')'

    '('  shift, and go to state 37


State 16

   17 datadef: ';' •

    $default  reduce using rule 17 (datadef)


State 17

    4 extdefs: @1 extdef •

    $default  reduce using rule 4 (extdefs)


State 18

    8 extdef: datadef •

    $default  reduce using rule 8 (extdef)


State 19

    7 extdef: fndef •

    $default  reduce using rule 7 (extdef)


State 20

   10 datadef: setspecs • notype_initdecls ';'
   28 fndef: setspecs • notype_declarator $@7 xdecls $@8 compstmt_or_error
   29      | setspecs • notype_declarator error

    IDENTIFIER  shift, and go to state 38
    '*'         shift, and go to state 39
    '('         shift, and go to state 40

    notype_initdecls   go to state 41
    notype_initdcl     go to state 42
    notype_declarator  go to state 43


State 21

   12 datadef: typed_declspecs • setspecs initdecls ';'
   14        | typed_declspecs • ';'
   20 fndef: typed_declspecs • setspecs declarator $@3 xdecls $@4 compstmt_or_error
   21      | typed_declspecs • setspecs declarator error

    ';'  shift, and go to state 44

    $default  reduce using rule 93 (setspecs)

    setspecs  go to state 45


State 22

   11 datadef: declmods • setspecs notype_initdecls ';'
   13        | declmods • ';'
   24 fndef: declmods • setspecs notype_declarator $@5 xdecls $@6 compstmt_or_error
   25      | declmods • setspecs notype_declarator error
   99 typed_declspecs: declmods • typespec reserved_declspecs
  105 declmods: declmods • TYPE_QUAL
  106         | declmods • SCSPEC

    TYPENAME   shift, and go to state 7
    SCSPEC     shift, and go to state 46
    TYPESPEC   shift, and go to state 9
    TYPE_QUAL  shift, and go to state 47
    ENUM       shift, and go to state 11
    STRUCT     shift, and go to state 12
    UNION      shift, and go to state 13
    TYPEOF     shift, and go to state 15
    ';'        shift, and go to state 48

    $default  reduce using rule 93 (setspecs)

    setspecs  go to state 49
    typespec  go to state 50
    structsp  go to state 24


State 23

   98 typed_declspecs: typespec • reserved_declspecs

    $default  reduce using rule 100 (reserved_declspecs)

    reserved_declspecs  go to state 51


State 24

  112 typespec: structsp •

    $default  reduce using rule 112 (typespec)


State 25

    6 extdefs: extdefs @2 extdef •

    $default  reduce using rule 6 (extdefs)


State 26

   15 datadef: error ';' •

    $default  reduce using rule 15 (datadef)


State 27

   16 datadef: error '}' •

    $default  reduce using rule 16 (datadef)


State 28

   30 identifier: IDENTIFIER •

    $default  reduce using rule 30 (identifier)


State 29

   31 identifier: TYPENAME •

    $default  reduce using rule 31 (identifier)


State 30

  175 structsp: ENUM '{' • @15 enumlist maybecomma_warn '}'

    $default  reduce using rule 174 (@15)

    @15  go to state 52


State 31

  173 structsp: ENUM identifier • '{' @14 enumlist maybecomma_warn '}'
  176         | ENUM identifier •

    '{'  shift, and go to state 53

    $default  reduce using rule 176 (structsp)


State 32

  166 structsp: STRUCT '{' • component_decl_list '}'

    $default  reduce using rule 183 (component_decl_list2)

    component_decl_list   go to state 54
    component_decl_list2  go to state 55


State 33

  165 structsp: STRUCT identifier • '{' @12 component_decl_list '}'
  167         | STRUCT identifier •

    '{'  shift, and go to state 56

    $default  reduce using rule 167 (structsp)


State 34

  170 structsp: UNION '{' • component_decl_list '}'

    $default  reduce using rule 183 (component_decl_list2)

    component_decl_list   go to state 57
    component_decl_list2  go to state 55


State 35

  169 structsp: UNION identifier • '{' @13 component_decl_list '}'
  171         | UNION identifier •

    '{'  shift, and go to state 58

    $default  reduce using rule 171 (structsp)


State 36

    9 extdef: ASM '(' • string ')' ';'

    STRING  shift, and go to state 59

    string  go to state 60


State 37

  114 typespec: TYPEOF '(' • expr ')'
  115         | TYPEOF '(' • typename ')'

    IDENTIFIER  shift, and go to state 61
    TYPENAME    shift, and go to state 7
    TYPESPEC    shift, and go to state 9
    TYPE_QUAL   shift, and go to state 62
    CONSTANT    shift, and go to state 63
    STRING      shift, and go to state 59
    SIZEOF      shift, and go to state 64
    ENUM        shift, and go to state 11
    STRUCT      shift, and go to state 12
    UNION       shift, and go to state 13
    TYPEOF      shift, and go to state 15
    ALIGNOF     shift, and go to state 65
    '&'         shift, and go to state 66
    '+'         shift, and go to state 67
    '-'         shift, and go to state 68
    '*'         shift, and go to state 69
    PLUSPLUS    shift, and go to state 70
    MINUSMINUS  shift, and go to state 71
    '('         shift, and go to state 72
    '~'         shift, and go to state 73
    '!'         shift, and go to state 74

    unop                 go to state 75
    expr                 go to state 76
    nonnull_exprlist     go to state 77
    unary_expr           go to state 78
    cast_expr            go to state 79
    expr_no_commas       go to state 80
    primary              go to state 81
    string               go to state 82
    typed_typespecs      go to state 83
    typespec             go to state 84
    structsp             go to state 24
    typename             go to state 85
    nonempty_type_quals  go to state 86


State 38

  163 notype_declarator: IDENTIFIER •

    $default  reduce using rule 163 (notype_declarator)


State 39

  160 notype_declarator: '*' • type_quals notype_declarator

    $default  reduce using rule 205 (type_quals)

    type_quals  go to state 87


State 40

  159 notype_declarator: '(' • notype_declarator ')'

    IDENTIFIER  shift, and go to state 38
    '*'         shift, and go to state 39
    '('         shift, and go to state 40

    notype_declarator  go to state 88


State 41

   10 datadef: setspecs notype_initdecls • ';'
  122 notype_initdecls: notype_initdecls • ',' initdcl

    ';'  shift, and go to state 89
    ','  shift, and go to state 90


State 42

  121 notype_initdecls: notype_initdcl •

    $default  reduce using rule 121 (notype_initdecls)


State 43

   28 fndef: setspecs notype_declarator • $@7 xdecls $@8 compstmt_or_error
   29      | setspecs notype_declarator • error
  129 notype_initdcl: notype_declarator • maybeasm maybe_attribute '=' @11 init
  130               | notype_declarator • maybeasm maybe_attribute
  158 notype_declarator: notype_declarator • '(' parmlist_or_identifiers
  161                  | notype_declarator • '[' expr ']'
  162                  | notype_declarator • '[' ']'

    error  shift, and go to state 91
    ASM    shift, and go to state 92
    '('    shift, and go to state 93
    '['    shift, and go to state 94
